<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_weight="6"
    android:background="@android:color/holo_blue_light">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="@dimen/font_big"
        android:gravity="right"
      />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/ceBtn"
            android:text="@string/CE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/deleteBtn"
            android:text="@string/delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"/>
        <Button
            android:id="@+id/divisionBtn"
            android:text="@string/division"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/sevenBtn"
            android:text="@string/seven"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
        <Button
            android:id="@+id/eightBtn"
            android:text="@string/eight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
        <Button
            android:id="@+id/nineBtn"
            android:text="@string/nine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
        <Button
            android:id="@+id/plusBtn"
            android:text="@string/plus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/fourBtn"
            android:text="@string/four"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
        <Button
            android:id="@+id/fiveBtn"
            android:text="@string/five"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
        <Button
            android:id="@+id/sixBtn"
            android:text="@string/six"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
        <Button
            android:id="@+id/substractionBtn"
            android:text="@string/substraction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/oneBtn"
            android:text="@string/one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
        <Button
            android:id="@+id/twoBtn"
            android:text="@string/two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
        <Button
            android:id="@+id/threeBtn"
            android:text="@string/three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
        <Button
            android:id="@+id/sumBtn"
            android:text="@string/sum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/zeroBtn"
            android:text="@string/zero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/dotBtn"
            android:text="@string/dot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"/>
        <Button
            android:id="@+id/equalBtn"
            android:text="@string/equal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"/>


    </LinearLayout>



</LinearLayout>
